* 2013-10-31 - thorben.betten@open-xchange.com

 - Fix for bug 29598: Assume that subfolder creation basically works if returned NO response from IMAP server signals some kind of exceeded quota error

* 2013-10-30 - martin.schneider@open-xchange.com

 - Fix for bug 29240: Removed unnecessary creation of UUID for contacts from csv import
 - Fix for bug 29108: Changed logged output for commands

* 2013-10-30 - thorben.betten@open-xchange.com

 - Fix for bug 29512: Fixed associated Microformat publication template and applied proper timeout
 - Fix for bug 29561: Added null guards to reporting tool if 'Orchestration' has no last report available

* 2013-10-29 - thorben.betten@open-xchange.com

 - Fix for bug 29516: Do not store password in IMAP store cache
 - Fix for bug 29518: Collect addresses on read access to unread/unseen messages
 - Fix for bug 29519: No public folder check for InfoStore folders
 - Fix for bug 29564: Check for presence of "Content-Length" header prior to attempting to check it

* 2013-10-29 - tobias.friedrich@open-xchange.com

 - Fix for bug 29205: Use 'universalchardet' charset detection library
 - Fix for bug 29529: Made 'validate_contact_email' setting available via 'io.ox/core//features/validateMailAddresses'

* 2013-10-28 - tobias.friedrich@open-xchange.com

 - Fix for bug 24642: Resolve participant information for shared calendar folders as needed
 - Fix for bug 29372: Ensure that "all"-host-wildcards from 'as-config.yml' are applied first
 
* 2013-10-28 - jan.bauerdick@open-xchange.com

 - Fix for bug 29495: Swapped warnings
 
* 2013-10-28 - ioannis.chouklis@open-xchange.com
 
 - Fix for bug 29094: [L3] Automatically collect contacts in the folder "Collected addresses" while reading

* 2013-10-28 - thorben.betten@open-xchange.com

 - Fix for bug 28886: Removed obsolete GMX crawler identifiers/specs from 'crawler.properties' file
 - Fix for bug 29509: Fixed typo in i18n string