@@ -53,6 +53,7 @@ import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import com.openexchange.caldav.GroupwareCaldavFactory;
+import com.openexchange.caldav.mixins.SupportedCalendarComponentSets;
 import com.openexchange.exception.OXException;
 import com.openexchange.folderstorage.ContentType;
 import com.openexchange.folderstorage.FolderResponse;
@@ -96,6 +97,9 @@ public class CalDAVRootCollection extends CommonCollection {
     public CalDAVRootCollection(GroupwareCaldavFactory factory) {
         super(factory, new WebdavPath());
         this.factory = factory;
+        super.includeProperties(
+            new SupportedCalendarComponentSets(SupportedCalendarComponentSets.VEVENT, SupportedCalendarComponentSets.VTODO)
+        );
     }
 
     @Override
